namespace MonsterTradingCardsGame.App.Cards
{
    public enum Modification
    {
        Normal,
        Water, 
        Fire
    }
}