namespace MonsterTradingCardsGame.App.Cards
{
    public enum MonsterType
    {
        Goblin,
        Dragon,
        Wizard,
        Org,
        Knight,
        Kraken,
        Elve
    }
}