namespace MonsterTradingCardsGame
{
    public class Trade
    {
        
    }
}